# spokecalc

./: .gitignore  CMakeLists.txt  README.md  Session.vim  readme.md  spokecalc
debian/: changelog  control  copyright  files  rules
src/: bicycle_asci_art.txt  main.cpp
